2007-06-02  Jordi Mas <jmas@softcatala.org>

	* ca/ca.po: Catalan translation by Gil Forcada
	* Makefile.am: Added ca to DOC_LINGUAS.

2007-04-14  Changwoo Ryu  <cwryu@debian.org>

	* ko/ko.po: Migrated to gnome-doc-utils.
	* ko/*.xml, ko/Makefile.am, ko/gnome-system-log-ko.omf: Removed.
	* Makefile.am: Added ko to DOC_LINGUAS.

2007-03-12  David Lodge <dave@cirt.net>

	* en_GB/en_GB.po: Added (British) English translation.
	* Makefile.am: Added en_GB to DOC_LINGUAS

2007-03-10  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* Makefile.am: Added ru to DOC_LINGUAS
	* ru/ru.po: Added Russian translation by
	Sergey V. Mironov <sergo@bk.ru>

2007-03-03  Luca Ferretti  <elle.uca@libero.it>

	* if/figures/syslog_window.png:
	Updated to match current appearance and settings.

2007-03-03  Luca Ferretti  <elle.uca@libero.it>

	* Makefile.am:
	* it/it.po:
	* it/Makefile.am:
	* it/gnome-system-log.xml:
	* it/gnome-system-log-it.omf
	* it/legal.xml:
	Remove old Italian translation and add new PO for it.
	Translation from Andrea Zagli.

2006-12-06  Daniel Nylander <po@danielnylander.se>

	* sv/figures/syslog_window.png: Updated screenshot.

2006-11-09  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.
	
2006-08-17  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Added French translation.
	* fr/*.xml: Removed obsolete files.
	* fr/Makefile.am: Removed obsolete file.
	* Makefile.am: added fr to DOC_LINGUAS

2006-07-23  Daniel Nylander  <po@danielnylander.se>

        * sv/sv.po: Updated Swedish translation.
	* sv/*.xml: Removed obsolete files.
	
2006-06-28  Daniel Nylander <po@danielnylander.se>

        * sv/sv.po: Added Swedish translation.
	
2006-06-17  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es/es.po: Updated Spanish translation.

2006-03-29  German Poo-Caaman~o <gpoo@ubiobio.cl>

	* es/es.po: Fixed build error by translation with extra '\n' at
	            the end of msgtr.
