@@ -1,3 +1,8 @@
+2008-01-09  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* C/gnome-system-log.xml: Fix some menu paths.
+	Patch from Bob Mauchin. Closes bug #500334.
+
 2007-06-02  Jordi Mas <jmas@softcatala.org>
 
 	* ca/ca.po: Catalan translation by Gil Forcada
